@@ -1,5 +1,6 @@
 Version 2.02.89 - 
 ==================================
+  Reduce number of lstat calls when selecting device alias.
   Add function to inialize common structure device members.
   Always zalloc device structure during initialization.
   Fix missing thread list manipulation protection in dmeventd.
